--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-default">
+
+    <!-- Start Nav -->
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -34,11 +36,39 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#" type="button" data-target=".modal" data-toggle="modal">Contact</a></li>
           </ul>
         </div>
       </div>
     </nav>
+
+    <!-- Start Modal-->
+
+    <div class="modal fade" tabindex="-1" role="dialog">
+      <div class="modal-dialog">
+        <div class="model-content">
+          <div class="model-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h2 class="modal-title">Contact</h2>
+          </div>
+          <div class="modal-body">
+            <h3>Tell us your name:</h3>
+            <input type="text" size="30"></input>
+            <h3>How about an email?</h3>
+            <input type="text" size="30"></input>
+            <h3>We'll call you:</h3>
+            <input type="tel" ></input>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Start Carousel -->
 
     <div id="carousel-example-generic" class="carousel slide jumbotron" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -59,6 +89,21 @@
         <div class="item">
         <h1>3</h1>
         </div>
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col-sm-4">
+        <h3>col 1</h3>
+      </div>
+
+      <div class="col-sm-4">
+        <h3>col 2</h3>
+      </div>
+
+      <div class="col-sm-4">
+        <h3>col 3</h3>
       </div>
 
     </div>
