--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 
     <!-- Start Carousel -->
 
-    <div id="carousel-example-generic" class="carousel slide jumbotron" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide jumbotron" data-ride="carousel">
       <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
 
       <div class="carousel-inner">
@@ -90,8 +90,19 @@
         <h1>3</h1>
         </div>
       </div>
+      
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
 
+    <!-- Start Row content -->
     <div class="row">
 
       <div class="col-sm-4">
@@ -105,7 +116,6 @@
       <div class="col-sm-4">
         <h3>col 3</h3>
       </div>
-
     </div>
 
 
