Add images to carousel.

--- a/index.html
+++ b/index.html
@@ -79,18 +79,31 @@
 
       <div class="carousel-inner">
         <div class="item active">
-        <h1>Come Visit Alaska!</h1>
+        <div class="comeVisitItem">
+          <h1>Come Visit Alaska!</h1>
+          <img src="images/bear.jpg" alt="" />
+        </div>
+
         </div>
 
         <div class="item">
-        <h1>2</h1>
+          <div class="seeRawNature">
+            <h1>See Raw Nature</h1>
+            <img src="images/greenMountain.jpg" alt="" />
+
+          </div>
+
         </div>
 
         <div class="item">
-        <h1>3</h1>
+          <div class="seeRawNature">
+            <h1>That's a lot of ice!</h1>
+            <img src="images/glacier.jpg" alt="" />
+
+          </div>
         </div>
       </div>
-      
+
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
@@ -106,15 +119,24 @@
     <div class="row">
 
       <div class="col-sm-4">
-        <h3>col 1</h3>
+        <h3> Geography</h3>
+        <p>
+          Alaska is the northernmost and westernmost state in the United States and has the most easterly longitude in the United States because the Aleutian Islands extend into the eastern hemisphere. Alaska is the only non-contiguous U.S. state on continental North America; about 500 miles (800 km) of British Columbia (Canada) separates Alaska from Washington. It is technically part of the continental U.S., but is sometimes not included in colloquial use; Alaska is not part of the contiguous U.S., often called "the Lower 48".
+        </p>
       </div>
 
       <div class="col-sm-4">
-        <h3>col 2</h3>
+        <h3>Climate</h3>
+        <p>
+          The climate in Southeast Alaska is a mid-latitude oceanic climate in the southern sections and a subarctic oceanic climate in the northern parts. On an annual basis, Southeast is both the wettest and warmest part of Alaska with milder temperatures in the winter and high precipitation throughout the year. The climate of Anchorage and south central Alaska is mild by Alaskan standards due to the region's proximity to the seacoast. While the area gets less rain than southeast Alaska, it gets more snow, and days tend to be clearer.
+        </p>
       </div>
 
       <div class="col-sm-4">
-        <h3>col 3</h3>
+        <h3>History</h3>
+        <p>
+          Numerous indigenous peoples occupied Alaska for thousands of years before the arrival of European peoples to the area. Linguistic and DNA studies done here have provided evidence for the settlement of North America by way of the Bering land bridge. The Tlingit people developed a society with a matrilineal kinship system of property inheritance and descent in what is today Southeast Alaska, along with parts of British Columbia and the Yukon. Also in Southeast were the Haida, now well known for their unique arts.
+        </p>
       </div>
     </div>
 
