--- a/index.html
+++ b/index.html
@@ -35,7 +35,17 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li>
+              <a href="#activities" type="button" data-toggle="dropdown">
+                Activities
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="dLabel">
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+              </ul>
+            </li>
             <li><a href="#" type="button" data-target=".modal" data-toggle="modal">Contact</a></li>
           </ul>
         </div>
