add big content area between activities and columns.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,22 @@
           Numerous indigenous peoples occupied Alaska for thousands of years before the arrival of European peoples to the area. Linguistic and DNA studies done here have provided evidence for the settlement of North America by way of the Bering land bridge. The Tlingit people developed a society with a matrilineal kinship system of property inheritance and descent in what is today Southeast Alaska, along with parts of British Columbia and the Yukon. Also in Southeast were the Haida, now well known for their unique arts.
         </p>
       </div>
+    </div><!--end of row content -->
+
+    <div class="bigContent">
+      <h1>Come experence the great outdoors!</h1>
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="images/road.jpg" alt="" />
+        </div>
+        <div class="col-sm-6">
+          <img src="images/lights.jpg" alt="" />
+        </div>
+      </div>
+
     </div>
+
+
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
