Add content for Activities section

--- a/index.html
+++ b/index.html
@@ -154,13 +154,40 @@
       <h1>Come experence the great outdoors!</h1>
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/road.jpg" alt="" />
+          <img src="images/road.jpg"  />
         </div>
         <div class="col-sm-6">
-          <img src="images/lights.jpg" alt="" />
+          <img src="images/lights.jpg"  />
         </div>
       </div>
+    </div>
 
+    <div class="activities">
+      <h1>Things to do in Alaska</h1>
+      <p>
+        When you come to Alaska - there is so much to do! Below is a list of activites that keep visitors coming back time and time again. We really enjoy taking time off and just relaxing, but these activies can be really fun.
+      </p>
+      <div class="fishing">
+        <h2>Ideally located giving anglers access to the Kenai and Kasilof Rivers</h2>
+        <p>
+          in The Kenai that anglers come to when seeking Trophy-Class fishing for Salmon and Halibut. More King Salmon over 70 lbs. have been landed here than in all other parts of Alaska combined! Experienced, professional guides and World-Class Alaska Fishing that will literally "take your breath away" await you.
+        </p>
+        <h3>Because we own and operate three separate fishing lodges, you can choose the level of accomodation that suits your personnal taste.</h3>
+      </div>
+      <div class="hiking">
+        <h2>Hiking is one of the best ways to discover what makes the Alaskan wilderness unique.</h2>
+        <p>
+          Alaska, northwest of Canada, is the largest and most sparsely populated U.S. state. It's known for its dramatic, diverse terrain of wide-open spaces, mountains and forests, with abundant wildlife and many small towns. It’s a destination for outdoor activities including skiing, mountain biking and kayaking. Massive Denali National Park, home to Denali (fka Mt. McKinley), North America’s highest peak, is a site of animal-viewing tours.
+        </p>
+        <h3>Because they’re experts in their local areas, they know the best trails and the most scenic spots. And they’ll share fascinating insights about the trees, tundra, wildlife, native history, and natural history of the places you visit.</h3>
+      </div>
+      <div class="wildlife">
+        <h2>Whether you’re looking for tiny ice worms, colorful songbirds, or giant coastal brown bears, watching Alaska’s wild creatures in their natural setting is a thrill for Alaskans and visitors alike.</h2>
+        <p>
+          Alaska’s wildlands are vast and finding wildlife often requires knowledge and preparation. The state’s wildlife viewing program can point out viewing opportunities throughout the state, help you learn about Alaska’s wildlife, and provide safety tips.
+        </p>
+        <h3>Take a tip from Albert Einstein who said, “Joy in looking and comprehending is nature's most beautiful gift,” and enjoy Alaska’s wildlife!</h3>
+      </div>
     </div>
 
 
